force-app/main/default/objects/Document_Name_and_Code__mdt/Document_Name_and_Code__mdt.object-meta.xml
<CustomObject>
    <label>Document Name and Code</label>
    <pluralLabel>Document Name and Codes</pluralLabel>
</CustomObject>