force-app/main/default/objects/Document_Name_and_Code__mdt/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <label>Document Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>