force-app/main/default/objects/Document_Name_and_Code__mdt/fields/Document_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No__c</fullName>
    <label>Document No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>