force-app/main/default/objects/Document_Name_and_Code__mdt/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <label>Group ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AG/DEED</fullName>
                <default>true</default>
                <label>AG/DEED</label>
            </value>
            <value>
                <fullName>Cert</fullName>
            </value>
            <value>
                <fullName>Layout/Plan</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Per/ORD</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Receipts</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>ID Proof/Address Proof/Other Documents</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Income Documents</fullName>
            </value>
            <value>
                <fullName>Docket checks</fullName>
            </value>
            <value>
                <fullName>Specialized Services</fullName>
            </value>
            <value>
                <fullName>Contact Point Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>