force-app/main/default/objects/Document_Name_and_Code__mdt/fields/Sobject_Names__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Names__c</fullName>
    <label>Sobject Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>